--- a/DockerFile
+++ b/DockerFile
@@ -9,7 +9,7 @@ RUN curl https://packages.microsoft.com/keys/microsoft.asc | apt-key add -
 RUN curl https://packages.microsoft.com/config/debian/10/prod.list > /etc/apt/sources.list.d/mssql-release.list
 RUN apt-get update
 
-RUN ACCEPT_EULA=Y apt-get install msodbcsql17 -yqq
+RUN ACCEPT_EULA=Y apt-get install msodbcsql17 mssql-tools -yqq
 RUN apt-get install unixodbc-dev -yqq
 
 # install php=sqlsrv extension
